# open-gemini-canvas

./: .env.example  ARCHITECTURE.md  README.md  README_SISTEMA.md  package-lock.json  package.json
.claude/: settings.local.json
.qoder/quests/: agent-orchestration-research.md  project-analysis-configuration.md
.qoder/repowiki/pt/content/: Estrutura de Diretórios.md  Fluxos de Trabalho.md  Guia de Configuração e Execução.md  Guia para Desenvolvedores.md  Integração entre Camadas.md  Stack Tecnológica.md  Visão Geral do Sistema.md
.qoder/repowiki/pt/content/Arquitetura do Backend/: Arquitetura do Backend.md  Fluxos com LangGraph.md  Servidor FastAPI.md
.qoder/repowiki/pt/content/Arquitetura do Frontend/: Arquitetura do Frontend.md  Contexto e Estado Global.md
.qoder/repowiki/pt/meta/: repowiki-metadata.json
agent/: .env.example  .env.local  agente_contratos.py  agente_societario.py  agente_tributario.py  checkpointing.py  fault_tolerance.py  handoffs.py  main.py  mapreduce.py  master_agent.py  observability.py  persistent_memory.py  posts_generator_agent.py  pyproject.toml  routing.py  simple_server.py  stack_agent.py  supervisor.py  test_server.py
agent/tests/: test_multi_agent_system.py
app/: layout.tsx  page.tsx  types.d.ts  wrapper.tsx
app/api/copilotkit/: route.ts
app/contexts/: LayoutContext.tsx
app/legal-master/: page.tsx
app/legal-specialists/: page.tsx
app/post-generator/: page.tsx
app/prompts/: prompts.ts
docs/: MIGRATION_SUMMARY.md  OPENROUTER_SETUP.md
scripts/: setup-openrouter.bat  setup-openrouter.sh  validate-migration.sh
(+78 files in other folders)
